--- a/register.html
+++ b/register.html
@@ -106,14 +106,30 @@
 
     <main>
       <section id="login_section" class="row center-align px_1">
-        <div class="form_box col s12 m6 l4 centered">
+        <div class="form_box register_form_box col s12 m6 l4 centered">
           <i class="fas fa-user-check fa-3x"></i>
           <h5>فرم ورود</h5>
           <form class="col s12">
 
             <div class="row m_0 center-align">
               <div class="input-field col s11">
-                <input id="phone" type="number" class="validate white-text" autofocus>
+                <input autocomplete="off" id="firstname" type="text" class="validate white-text">
+                <label for="firstname" class="white-text">نام</label>
+                <small class="grey-text text-lighten-1" data-error="wrong" data-success="right">فقط حروف</small>
+              </div>
+            </div>
+            
+            <div class="row m_0 center-align">
+              <div class="input-field col s11">
+                <input autocomplete="off" id="lastname" type="text" class="validate white-text" >
+                <label for="lastname" class="white-text">نام خانوادگی</label>
+                <small class="grey-text text-lighten-1" data-error="wrong" data-success="right">فقط حروف</small>
+              </div>
+            </div>
+
+            <div class="row m_0 center-align">
+              <div class="input-field col s11">
+                <input autocomplete="off" id="phone" type="number" class="validate white-text" >
                 <label for="phone" class="white-text">شماره موبایل</label>
                 <small class="grey-text text-lighten-1" data-error="wrong" data-success="right">فقط عدد(09101111111)</small>
               </div>
@@ -121,8 +137,15 @@
 
             <div class="row m_0 center-align">
               <div class="input-field col s11">
-                <input id="password" type="password" class="validate white-text">
+                <input autocomplete="off" id="password" type="password" class="validate white-text">
                 <label for="password" class="white-text">رمز عبور</label>
+              </div>
+            </div>
+
+            <div class="row m_0 center-align">
+              <div class="input-field col s11">
+                <input autocomplete="off" id="con_password" type="password" class="validate white-text">
+                <label for="con_password" class="white-text">تکرار عبور</label>
               </div>
             </div>
 
@@ -130,8 +153,7 @@
               <a class="waves-effect waves-light btn cyan darken-4 col s12">ورود</a>
             </div>
 
-              <a class="my_1 col s12 pink-text text-lighten-4">رمز عبور خود را فراموش کرده ام</a>
-              <a class="my_1 col s12 pink-text text-lighten-4">هنوز ثبت نام نکرده ام</a>
+              <a class="my_1 col s12 pink-text text-lighten-4">قبلا ثبت نام کرده ام</a>
 
             
           </form>
